fix printing version line spacing

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -218,7 +218,7 @@
     .resume-item-details {
       font-size: 12px;
       margin: 0;
-      line-height: .7em;
+      line-height: 1.5em;
       font-style:italic;
     }
   }
